// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImagePreview snapshot renders correctly 1`] = `
<DocumentFragment>
  <div
    class="za-mask "
    style="background-color: rgb(0, 0, 0);"
  />
  <div
    class="za-popup__wrapper za-image-preview"
  >
    <div
      class="za-popup za-popup--center "
    >
      <div
        class="za-image-preview__content"
      >
        <div
          class="za-carousel za-carousel--horizontal"
        >
          <div
            class="za-carousel__items"
            style="transition-duration: 0ms; transform: translate3d(0px, 0px, 0);"
          >
            <div
              class="za-carousel__item za-image-preview__item"
            >
              <div
                class="za-pinch-zoom"
              >
                <img
                  alt=""
                  draggable="false"
                  src="https://static.zhongan.com/website/health/zarm/images/banners/1.png"
                  style="max-height: 768px;"
                />
              </div>
            </div>
            <div
              class="za-carousel__item za-image-preview__item"
            >
              <div
                class="za-pinch-zoom"
              >
                <img
                  alt=""
                  draggable="false"
                  src="https://static.zhongan.com/website/health/zarm/images/banners/2.png"
                  style="max-height: 768px;"
                />
              </div>
            </div>
            <div
              class="za-carousel__item za-image-preview__item"
            >
              <div
                class="za-pinch-zoom"
              >
                <img
                  alt=""
                  draggable="false"
                  src="https://static.zhongan.com/website/health/zarm/images/banners/3.png"
                  style="max-height: 768px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="za-image-preview__footer"
      >
        <div
          class="za-image-preview__pagination"
        >
          1 / 3
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ImagePreview snapshot renders correctly with origin 1`] = `
<DocumentFragment>
  <div
    class="za-mask "
    style="background-color: rgb(0, 0, 0);"
  />
  <div
    class="za-popup__wrapper za-image-preview"
  >
    <div
      class="za-popup za-popup--center "
    >
      <div
        class="za-image-preview__content"
      >
        <div
          class="za-carousel za-carousel--horizontal"
        >
          <div
            class="za-carousel__items"
            style="transition-duration: 0ms; transform: translate3d(0px, 0px, 0);"
          >
            <div
              class="za-carousel__item za-image-preview__item"
            >
              <div
                class="za-pinch-zoom"
              >
                <img
                  alt=""
                  draggable="false"
                  src="https://cdn-health.zhongan.com/zarm/imagePreview/compress_1.png"
                  style="max-height: 768px;"
                />
              </div>
            </div>
            <div
              class="za-carousel__item za-image-preview__item"
            >
              <div
                class="za-pinch-zoom"
              >
                <img
                  alt=""
                  draggable="false"
                  src="https://cdn-health.zhongan.com/zarm/imagePreview/compress_2.png"
                  style="max-height: 768px;"
                />
              </div>
            </div>
            <div
              class="za-carousel__item za-image-preview__item"
            >
              <div
                class="za-pinch-zoom"
              >
                <img
                  alt=""
                  draggable="false"
                  src="https://cdn-health.zhongan.com/zarm/imagePreview/compress_3.png"
                  style="max-height: 768px;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="za-image-preview__footer"
      >
        <button
          aria-disabled="false"
          class="za-button za-button--default za-button--xs za-button--radius"
          type="button"
        >
          <span>
            查看原图
          </span>
        </button>
        <div
          class="za-image-preview__pagination"
        >
          1 / 3
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
